# Physics-Calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  clean.sh  make.sh
impl/: impl_accerleration.cpp  impl_avg_velocity.cpp  impl_density.cpp  impl_force.cpp  impl_formulas.cpp  impl_kinetic_energy.cpp  impl_potential_energy.cpp  impl_weight.cpp  impl_work.cpp
impl/Electricity/: impl_charge.cpp  impl_coulombs_law.cpp  impl_ohms_law.cpp  impl_power.cpp
impl/Energy/: impl_efficiency.cpp  impl_heat_energy.cpp  impl_kinetic_energy.cpp  impl_potential_energy.cpp
impl/Gravity/: impl_gravitational_force.cpp
impl/Helper/: helper_funcs.hpp
impl/Mechanics/: impl_acceleration.cpp  impl_avg_velocity.cpp  impl_density.cpp  impl_force.cpp  impl_hookes_law.cpp  impl_momentum.cpp  impl_power.cpp  impl_pressure.cpp  impl_torque.cpp  impl_weight.cpp  impl_work.cpp
impl/Rotational_Dynamics/: impl_angular_acceleration.cpp  impl_angular_velocity.cpp  impl_rotational_energy.cpp
impl/Waves/: impl_frequency.cpp  impl_period.cpp  impl_wave_speed.cpp
impl/helper/: helper_funcs.hpp
include/: inc_accerleration.hpp  inc_avg_velocity.hpp  inc_density.hpp  inc_force.hpp  inc_formulas.hpp  inc_kinetic_energy.hpp  inc_potential_energy.hpp  inc_weight.hpp  inc_work.hpp
include/Electricity/: inc_charge.hpp  inc_coulombs_law.hpp  inc_ohms_law.hpp  inc_power.hpp
include/Energy/: inc_efficiency.hpp  inc_heat_energy.hpp  inc_kinetic_energy.hpp  inc_potential_energy.hpp
include/Gravity/: inc_gravitational_force.hpp
include/Mechanics/: inc_acceleration.hpp  (+10 more)
src/: main.cpp
(+6 files in other folders)
